[ soapui-248 ] Improve Resolver-dialog and logic - added update button : goes trough project and looks for problematic paths, based on that updates resolver dialog. - to add update button added changes SimpleDialog