@@ -23,7 +23,7 @@ import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 
-public abstract class AbstractPathPropertySupport 
+public abstract class AbstractPathPropertySupport
 {
 	private final String propertyName;
 	private final AbstractWsdlModelItem<?> modelItem;
@@ -37,21 +37,21 @@ public abstract class AbstractPathPropertySupport
 	public String set(String value, boolean notify)
 	{
 		String old = get();
-		value = PathUtils.relativizeResourcePath( value, modelItem );
+		value = PathUtils.relativizeResourcePath(value, modelItem);
 		try
 		{
-			setPropertyValue(PathUtils.normalizePath( value ));
-			if( notify )
+			setPropertyValue(PathUtils.normalizePath(value));
+			if (notify)
 				notifyUpdate(value, old);
-		} 
+		}
 		catch (Exception e)
 		{
 			e.printStackTrace();
 		}
-		
+
 		return old;
 	}
-	
+
 	public String get()
 	{
 		try
@@ -64,7 +64,7 @@ public abstract class AbstractPathPropertySupport
 			return null;
 		}
 	}
-	
+
 	public String getPropertyName()
 	{
 		return propertyName;
@@ -79,108 +79,120 @@ public abstract class AbstractPathPropertySupport
 
 	protected void notifyUpdate(String value, String old)
 	{
-		modelItem.notifyPropertyChanged( modelItem.getClass().getName() + "@" + propertyName, old, value );
+		modelItem.notifyPropertyChanged(modelItem.getClass().getName() + "@" + propertyName, old, value);
 	}
 
 	public String expand(TestRunContext context)
 	{
 		try
 		{
-			return PathUtils.expandPath( getPropertyValue(), modelItem, context );
-		} 
+			return PathUtils.expandPath(getPropertyValue(), modelItem, context);
+		}
 		catch (Exception e)
 		{
 			e.printStackTrace();
 			return null;
 		}
 	}
-	
+
 	public String expand()
 	{
 		try
 		{
-			return PathUtils.resolveResourcePath( getPropertyValue(), modelItem );
-		} 
+			return PathUtils.resolveResourcePath(getPropertyValue(), modelItem);
+		}
 		catch (Exception e)
 		{
 			e.printStackTrace();
 			return null;
 		}
 	}
-	
+
 	public String expandUrl()
 	{
 		String result = expand();
 		try
 		{
-			if( PathUtils.isFilePath(result) && !result.startsWith( "file:" ))
-         {
-            result = new File( result ).toURI().toURL().toString();
-         }
-         else
-         {
-            result = new URL( result ).toString();
-         }
-      }
+			if (PathUtils.isFilePath(result) && !result.startsWith("file:"))
+			{
+				result = new File(result).toURI().toURL().toString();
+			}
+			else
+			{
+				result = new URL(result).toString();
+			}
+		}
 		catch (MalformedURLException e)
 		{
 			SoapUI.logError(e);
 		}
-		
+
 		return result;
 	}
 
 	public abstract String getPropertyValue() throws Exception;
 
-	public void resolveFile( ResolveContext context, String errorDescription)
+	public void resolveFile(ResolveContext context, String errorDescription)
 	{
 		resolveFile(context, errorDescription, null, null, true);
 	}
-	
-	public void resolveFile(ResolveContext context, String errorDescription, String extension, String fileType, final boolean notify  )
+
+	public void resolveFile(ResolveContext context, String errorDescription, String extension, String fileType,
+			final boolean notify)
 	{
 		String source = expand();
-		if( StringUtils.hasContent(source) )
+		if (StringUtils.hasContent(source))
 		{
 			try
 			{
-				new URL( source );
+				new URL(source);
 			}
-			catch( Exception e )
+			catch (Exception e)
 			{
-				File file = new File( source );
-				if( !file.exists())
+				File file = new File(source);
+				if (!file.exists())
 				{
-					context.addPathToResolve( modelItem, errorDescription, source, new ResolveContext.FileResolver( "Select File", 
-							extension, fileType, file.getParent()) {
-						
+					if (context.hasThisModelItem(modelItem, errorDescription, source))
+						return;
+					context.addPathToResolve(modelItem, errorDescription, source, new ResolveContext.FileResolver(
+							"Select File", extension, fileType, file.getParent())
+					{
+
 						@Override
 						public boolean apply(File newFile)
 						{
 							set(newFile.getAbsolutePath(), notify);
 							return true;
 						}
-					} );
+					});
+				}
+				else
+				{
+					if (context.hasThisModelItem(modelItem, errorDescription, source))
+						context.getPath(modelItem, errorDescription, source).setSolved(true);
 				}
 			}
 		}
 	}
-	
-	public void resolveFolder(ResolveContext context, String errorDescription, final boolean notify  )
+
+	public void resolveFolder(ResolveContext context, String errorDescription, final boolean notify)
 	{
 		String source = expand();
-		if( StringUtils.hasContent(source) )
+		if (StringUtils.hasContent(source))
 		{
 			try
 			{
-				new URL( source );
+				new URL(source);
 			}
-			catch( Exception e )
+			catch (Exception e)
 			{
-				File file = new File( source );
-				if( !file.exists() || !file.isDirectory())
+				File file = new File(source);
+				if (!file.exists() || !file.isDirectory())
 				{
-					context.addPathToResolve( modelItem, errorDescription, source, new ResolveContext.DirectoryResolver( "Select Directory", source )
+					if (context.hasThisModelItem(modelItem, errorDescription, source))
+						return;
+					context.addPathToResolve(modelItem, errorDescription, source, new ResolveContext.DirectoryResolver(
+							"Select Directory", source)
 					{
 						@Override
 						public boolean apply(File newFile)
@@ -188,7 +200,12 @@ public abstract class AbstractPathPropertySupport
 							set(newFile.getAbsolutePath(), notify);
 							return true;
 						}
-					} );
+					});
+				}
+				else
+				{
+					if (context.hasThisModelItem(modelItem, errorDescription, source))
+						context.getPath(modelItem, errorDescription, source).setSolved(true);
 				}
 			}
 		}
